--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,19 +8,19 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 30, 5%, 18%;
-    --card: 0 0% 100%;
-    --card-foreground: 30, 5%, 18%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 30, 5%, 18%;
-    --primary: 330, 76%, 54%;
+    --background: 250 0% 100%;
+    --foreground: 30 5% 18%;
+    --card: 250 0% 100%;
+    --card-foreground: 30 5% 18%;
+    --popover: 250 0% 100%;
+    --popover-foreground: 30 5% 18%;
+    --primary: 218 29% 20%;
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 96.1%;
-    --secondary-foreground: 30, 5%, 18%;
+    --secondary-foreground: 30 5% 18%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 172, 61%, 38%;
+    --accent: 172 61% 38%;
     --accent-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -43,19 +43,19 @@ body {
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
   .dark {
-    --background: 30, 5%, 18%;
+    --background: 218 17% 18%;
     --foreground: 0 0% 98%;
-    --card: 30, 5%, 18%;
+    --card: 218 17% 18%;
     --card-foreground: 0 0% 98%;
-    --popover: 30, 5%, 18%;
+    --popover: 218 17% 18%;
     --popover-foreground: 0 0% 98%;
-    --primary: 330, 76%, 54%;
+    --primary: 330 76% 54%;
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 172, 61%, 38%;
+    --accent: 172 61% 38%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
@@ -86,3 +86,6 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
+    
