--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -43,9 +42,9 @@ body {
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
 
-    --octaview-primary: #24292F;
-    --octaview-secondary: #FFFFFF;
-    --octaview-accent: #26A69A;
+    --octaview-primary: 36,41,47;
+    --octaview-secondary: 255,255,255;
+    --octaview-accent: 38,166,154;
   }
   .dark {
     --background: 218 17% 18%;
@@ -89,8 +88,8 @@ body {
   }
   body {
     @apply bg-background text-foreground;
-    background-color: var(--octaview-secondary);
-    color: var(--octaview-primary);
+    background-color: rgb(var(--octaview-secondary));
+    color: rgb(var(--octaview-primary));
   }
 }
 
@@ -122,4 +121,5 @@ body {
   background-color: hsl(var(--background));
   padding: 0 0.25rem;
 }
+
 
